src/sbio/bindings.rs

#[test]
fn bindgen_test_layout__multi_data_set() {
    const UNINIT: ::std::mem::MaybeUninit<_multi_data_set> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_multi_data_set>(),
        16usize,
        concat!("Size of: ", stringify!(_multi_data_set))
    );
    assert_eq!(
        ::std::mem::align_of::<_multi_data_set>(),
        4usize,
        concat!("Alignment of ", stringify!(_multi_data_set))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_multi_data_set),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data_offset) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(_multi_data_set),
            "::",
            stringify!(data_offset)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data_size) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(_multi_data_set),
            "::",
            stringify!(data_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).format) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_multi_data_set),
            "::",
            stringify!(format)
        )
    );
}
pub type gre_io_mdata_t = _multi_data_set;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _gre_io_error {
    pub error_code: i32,
    pub sys_code: i32,
}
#[test]
fn bindgen_test_layout__gre_io_error() {
    const UNINIT: ::std::mem::MaybeUninit<_gre_io_error> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_gre_io_error>(),
        8usize,
        concat!("Size of: ", stringify!(_gre_io_error))
    );
    assert_eq!(
        ::std::mem::align_of::<_gre_io_error>(),
        4usize,
        concat!("Alignment of ", stringify!(_gre_io_error))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).error_code) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_gre_io_error),
            "::",
            stringify!(error_code)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sys_code) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(_gre_io_error),
            "::",
            stringify!(sys_code)
        )
    );
}
pub type gre_io_error_t = _gre_io_error;
extern "C" {
    #[doc = " Open an IO connection using a named connection.\n\n @param io_name The name of the io-channel to use\n @param flag The mode you want to open the queue in\n @return handle to greio channel or NULL on failure."]
    pub fn gre_io_open(
        io_name: *const ::std::os::raw::c_char,
        flag: ::std::os::raw::c_int,
        ...
    ) -> *mut gre_io_t;
}
extern "C" {
    #[doc = " Close an io connection.  Any pending clients will return\n\n with an error on their action.\n @param handle A valid handle created with gre_io_open()"]
    pub fn gre_io_close(handle: *mut gre_io_t);
}
extern "C" {
    #[doc = " Send a serialized buffer to the handle.\n @param handle A valid handle created with gre_io_open()\n @param buffer A data buffer containing a serialized event\n @return -1 on failure anything else is success"]
    pub fn gre_io_send(
        handle: *mut gre_io_t,
        buffer: *mut gre_io_serialized_data_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Receive a serialized event.  This call blocks until an event is received\n or until the channel is destroyed.\n\n @param handle A valid handle created with gre_io_open()\n @param buffer A pointer to a serialized buffer pointer.  If the\n  buffer is NULL then a new buffer is allocated otherwise the buffer\n  provided is used to store the received event.\n @return The size of the message received or -1 on failure"]
    pub fn gre_io_receive(
        handle: *mut gre_io_t,
        buffer: *mut *mut gre_io_serialized_data_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Set the max message size that may be sent over an IO channel to match the size specified by the provided serialized buffer.\n This is not available on all greio implementations and will fail by returning -1 if it is not supported.\n\n @param handle A valid handle created with gre_io_open()\n @param buffer A data buffer\n @return -1 on failure anything else is success"]
    pub fn gre_io_grow_buffer(
        handle: *mut gre_io_t,
        buffer: *mut gre_io_serialized_data_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the maximum size of a message that may be sent over IO channel.\n\n @param handle A valid handle created with gre_io_open()\n @return -1 on error, success the size in bytes"]
    pub fn gre_io_max_message(handle: *mut gre_io_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the error codes if greio experiences an error.\n\n @param handle A valid handle created with gre_io_open()\n @param errorcodes A valid gre_io_error_t structure to be filled out"]
    pub fn gre_io_get_error_codes(handle: *mut gre_io_t, errorcodes: *mut gre_io_error_t);
}
extern "C" {
    #[doc = " Get the error message for an error code returned by a call to gre_io_get_error_codes.\n\n @param errorcodes A valid gre_io_error_t structure containing the errors returned\n  from a call to gre_io_get_error_codes\n @return The error message"]
    pub fn gre_io_get_error_message(
        errorcodes: *mut gre_io_error_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " This creates a data buffer to hold the serialized event data required\n for transmission.  This allows a resizable buffer to be allocated once\n and then re-used for multiple event transmissions.\n\n If the provided buffer is not NULL and already contains data within\n its buffers, then the resizing of the buffer will transfer the contents\n of the old internal buffer to the new buffer, similar to the realloc()\n function.  The buffer may be used in this fashion when data is being\n streamed so that multiple buffers are not required.\n\n Callers passing in a buffer should ensure that the return value is non-NULL before overwriting the\n pointer.  This is the same pattern that should be used when calling realloc.\n\n gre_io_serialized_data_t *new_buffer;\n new_buffer = gre_io_serialize(buffer, target, name, format, data, nbytes);\n if (!new_buffer) {\n     gre_io_free_buffer(buffer);\n     //log error.\n     return;\n }\n buffer = new_buffer;\n\n @param buffer The buffer to be sized, or NULL to allocate a new buffer\n @param nbytes The number of bytes this buffer should be able to support\n @return A buffer with room for a message nbytes in size or NULL if no space available"]
    pub fn gre_io_size_buffer(
        buffer: *mut gre_io_serialized_data_t,
        nbytes: ::std::os::raw::c_int,
    ) -> *mut gre_io_serialized_data_t;
}
extern "C" {
    #[doc = " This sets the data payload of the buffer to zero (0) bytes.\n The buffer is not resized or free'ed, but data content in\n the buffer should be considered lost.\n\n @param buffer The buffer to be de-allocated"]
    pub fn gre_io_zero_buffer(buffer: *mut gre_io_serialized_data_t);
}
extern "C" {
    #[doc = " This de-allocates a buffer that has been allocated through the\n calls to gre_io_* functions.\n\n @param buffer The buffer to be de-allocated"]
    pub fn gre_io_free_buffer(buffer: *mut gre_io_serialized_data_t);
}
extern "C" {
    #[doc = " Transform event data elements (see <io_mgr.h>) into a serialized data buffer.\n\n @param buffer The buffer that will contain the serialized data or NULL if a new buffer should be allocated\n @param event_target The name of the event target, or NULL to send to the default target\n @param event_name The name of the event to send, or NULL to send an empty event\n @param event_format The format of the data (see <data_format.h>, or NULL if no data is being sent\n @param event_data A pointer do the data to transmit, or NULL if no data is transmitted\n @param event_nbytes The number of data bytes to transmit, or NULL if no data is transmitted\n @return A buffer with the serialized data or NULL on error (errno is set)"]
    pub fn gre_io_serialize(
        buffer: *mut gre_io_serialized_data_t,
        event_target: *const ::std::os::raw::c_char,
        event_name: *const ::std::os::raw::c_char,
        event_format: *const ::std::os::raw::c_char,
        event_data: *const ::std::os::raw::c_void,
        event_nbytes: ::std::os::raw::c_int,
    ) -> *mut gre_io_serialized_data_t;
}
extern "C" {
    #[doc = " Transform a serialized buffer into event data elements (see <io_mgr.h>).  The\n pointers returned point back into the content of the serialized buffer so the\n buffer can't be de-allocated until clients are finished manipulating the data\n elements.\n\n @param buffer The buffer containing the serialized data\n @param event_target Location to store the event target\n @param event_name Location to store the event name\n @param event_format  Location to store the event format\n @param event_data  Location to store the event data\n @return The number of bytes in the event_data structure"]
    pub fn gre_io_unserialize(
        buffer: *mut gre_io_serialized_data_t,
        event_target: *mut *mut ::std::os::raw::c_char,
        event_name: *mut *mut ::std::os::raw::c_char,
        event_format: *mut *mut ::std::os::raw::c_char,
        event_data: *mut *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Add a data key/value pair to a serialized buffer.\n This call can be used to add serialize multiple data\n sets into a single send. This buffer can be later sent via\n the gre_io_send_mdata call.\n\n @param mbuffer The buffer containing the serialized data\n @param key_name Name of the variable to be set in data manager\n @param data_format The format of the data (see <data_format.h>, or NULL if no data is being sent\n @param data  A pointer do the data to transmit\n @param data_nbytes  The number of data bytes to transmit, or NULL if no data is transmitted\n @return -1 on failure anything else is success"]
    pub fn gre_io_add_mdata(
        mbuffer: *mut *mut gre_io_serialized_data_t,
        key_name: *const ::std::os::raw::c_char,
        data_format: *const ::std::os::raw::c_char,
        data: *const ::std::os::raw::c_void,
        data_nbytes: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Send a serialized buffer of mdata (data manager key/value pairs) to the handle.\n\n @param handle A valid handle created with gre_io_open()\n @param md_buffer A data buffer containing a serialized event\n @return -1 on failure anything else is success"]
    pub fn gre_io_send_mdata(
        handle: *mut gre_io_t,
        md_buffer: *mut gre_io_serialized_data_t,
    ) -> ::std::os::raw::c_int;
}
